# asa-copilot

./: .gitignore  COMMANDS.md  LICENSE  README.md  SKILL.md  pyproject.toml
asa_cli/: __init__.py  api.py  config.py  decisions.py  guide_hygiene.py  main.py  operator_reports.py  output.py  plans.py  recommendations.py
asa_cli/commands/: acl.py  adgroups.py  ads.py  budget.py  campaigns.py  config.py  decisions.py  geo.py  keywords.py  optimize.py  plan.py  reports.py  scope.py  search_terms.py
examples/: asa-rules.json
scripts/: generate_command_reference.py
tests/: __init__.py  test_api.py  test_apply_cli.py  test_budget.py  test_campaign_commands.py  test_command_scope.py  test_config.py  test_custom_reports.py  test_decisions.py  test_geo.py  test_keyword_command_failures.py  test_negative_keywords.py  test_phase45.py  test_plans.py  test_reason_command_surface.py  test_recommendations.py  test_reports_cli.py
